# ux-charts

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  SECURITY.md  TODO.md  book.toml  chapter_1.html  index.html  print.html  searchindex.js  searchindex.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yaml  tests.yml
examples/: 01-bar-chart.rs  02-cairo-line-chart.rs  02-line-chart.rs  03-cairo-pie-chart.rs  03-pie-chart.rs  04-cairo-gauge-chart.rs  04-gauge-chart.rs  05-cairo-radar-chart.rs  05-radar-chart.rs  cairo-chart.rs
src/: animation.rs  bar.rs  base.rs  basechart.rs  chapter_1.md  color.rs  datatable.rs  easing.rs  gauge.rs  lib.rs  line.rs  main.rs  math.rs  options.rs  pie.rs  radar.rs  text.rs  utils.rs
src/backend/: cairo_canvas.rs  mod.rs  web_canvas.rs
src/canvas/: canvas.rs  direction.rs  image.rs  mod.rs  style.rs
src/datastream/: collection.rs  collumn.rs  mod.rs  row.rs
tests/: datatable.rs
