[package]
name = "ux-charts"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>", "Maksim Makarov <pr0n1x@yandex.ru>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-charts"
repository = "https://github.com/angular-rust/ux-charts"
documentation = "https://docs.rs/ux-charts"
description = "Backend and runtime agnostic chart library"
keywords = ["web", "webassembly", "graphics", "gtk", "cairo"]
categories = ["multimedia", "wasm", "web-programming", "gui"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
web = ["wasm-bindgen", "wasm-bindgen-futures", "wasm-logger", "gloo", "js-sys", "wasm-bindgen-test", "web-sys", "ux-animate", "ux-animate/web"]
cairo = ["cairo-rs", "png", "gio", "gtk", "ux-animate", "ux-animate/cairo"]

[dependencies]
log = "0.4"
lazy_static = "1.4"
ux-primitives = "0.1"
ux-animate = { version = "0.1", default-features = false, optional = true }

png = { version = "0.16", optional = true }
gio = { version = "0.9", features = ["v2_58"], optional = true }
gtk = { version = "0.9", features = ["v3_22"], optional = true }
cairo-rs = { version = "0.9", features = ["png"], optional = true }

wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-logger = { version = "0.2", optional = true }
gloo = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-test = { version = "0.3", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  'KeyboardEvent',
  "ValidityState",
  "CustomEvent",
  "Node",
  "Element",
  "HtmlElement",
  "Window",
  "Document",
  "CanvasRenderingContext2d",
]

[dev-dependencies]

[build-dependencies]


[[example]]
name = "web-chart"
# crate-type = ["staticlib"]
required-features = ["web"]

[[example]]
name = "cairo-chart"
required-features = ["cairo"]
