[package]
name = "ux-charts"
version = "0.1.1"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-charts"
repository = "https://github.com/angular-rust/ux-charts"
documentation = "https://docs.rs/ux-charts"
description = "Backend and runtime agnostic chart library"
keywords = ["webassembly", "gtk", "cairo", "canvas", "charts"]
categories = ["multimedia", "wasm", "web-programming", "gui", "visualization"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "charts"

[dependencies]
log = "0.4"
lazy_static = "1.4"
ux-dataflow = "0.1"
ux-animate = "0.1"

[dependencies.ux-primitives]
version = "0.1"
features = [ "canvas" ]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cairo-rs = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
gloo = "0.2"
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "KeyboardEvent",
  "ValidityState",
  "CustomEvent",
  "Node",
  "Element",
  "HtmlElement",
  "Window",
  "Document",
  "CanvasRenderingContext2d",
  "TextMetrics",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "SvgImageElement",
  "HtmlVideoElement",
  "ImageBitmap",
  "CanvasWindingRule",
  "Path2d",
  "CanvasPattern",
  "CanvasGradient",
  "HitRegionOptions",
  "ImageData",
  "DomMatrix"
]

[dev-dependencies]

[build-dependencies]
